--- a/src/bot_description/launch/bot_controller.yaml
+++ b/src/bot_description/launch/bot_controller.yaml
@@ -7,14 +7,14 @@ bot_grid_controller:
   # Position Controllers --------------------------------------
   Rev3_position_controller:
     type: effort_controllers/JointPositionController
-    joint: Rev3
+    joint: ${uid}_release_servo_joint
     pid: {p: 100.0, i: 0.01, d: 10.0}
   
   # Velocity Controllers --------------------------------------
   bot_velocity_controller:
     type: diff_drive_controller/DiffDriveController
-    left_wheel: 'wheel_left_1'
-    right_wheel: 'wheel_right_1'
+    left_wheel: '${uid}_left_wheel'
+    right_wheel: '${uid}_right_wheel'
     publish_rate: 50
     pose_covariance_diagonal: [0, 0, 0, 0, 0, 0]
     twist_covariance_diagonal: [0, 0, 0, 0, 0, 0]
