--- a/src/my_controller/package.xml
+++ b/src/my_controller/package.xml
@@ -58,6 +58,7 @@
   <exec_depend>controller_interface</exec_depend>
   <exec_depend>pluginlib</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <depend>geometry_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
