--- a/src/my_controller/my_controller.yaml
+++ b/src/my_controller/my_controller.yaml
@@ -1,3 +1,13 @@
-my_controller_name:
-  type: my_controller_ns/MyControllerClass
-  joint_name: elbow_pitch_joint
+bot_grid:
+
+  right_velocity_controller:
+    type: effort_controllers/JointVelocityController joint: ${uid}_right_motor_joint
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+  left_velocity_controller:
+    type: effort_controllers/JointVelocityController joint: ${uid}_left_motor_joint
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+  servo_position_controller:
+    type: effort_controllers/JointPositionController joint: ${uid}_release_servo_joint
+    pid: {p: 100.0, i: 0.01, d: 10.0}
