--- a/src/mpc_controller/CMakeLists.txt
+++ b/src/mpc_controller/CMakeLists.txt
@@ -23,8 +23,9 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 find_package(cmake_modules REQUIRED)
-find_package(Eigen3 ipopt REQUIRED)
+find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED)
+# find_package(ipopt REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -115,6 +116,10 @@ find_package(Boost REQUIRED)
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
+generate_dynamic_reconfigure_options(
+    cfg/MPCPlanner.cfg
+)
+
 catkin_package(
  INCLUDE_DIRS include
  LIBRARIES mpc_controller
@@ -145,23 +150,28 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
     include
+    ${Eigen3_INCLUDE_DIRS}
+    # ${ipopt_INCLUDE_DIRS}
     ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/mpc_controller.cpp
-# )
+add_library(${PROJECT_NAME}
+  src/MPC.cpp
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
 # add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
+
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/mpc_controller_node.cpp)
+add_executable(
+    mpc_node 
+    src/MPC_Node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -174,9 +184,12 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries( mpc_node
+#   ${ipopt_LIBS}
+  ipopt
+  ${EIGEN3_LIBS}
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
