--- a/src/mpc_controller/package.xml
+++ b/src/mpc_controller/package.xml
@@ -64,6 +64,7 @@
   <depend>Eigen3</depend>
   <depend>Boost</depend>
   <depend>ipopt</depend>
+  <depend>message_generation</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
